# OpenGL3DRendering

./: CMakeLists.txt  Doxyfile  common.props  leeme.txt  library.props  pract-pg.sln  readme.md
BumpMapping/: BumpMapping.frag  BumpMapping.vcxproj  BumpMapping.vert  CMakeLists.txt  imgui.ini  log.txt  main.cpp
CRTEffect/: CMakeLists.txt  CRTEffect.vcxproj  imgui.ini  log.txt  main.cpp  textureReplace.frag
Debug/BumpMapping/: BumpMappingd.exe.recipe
Debug/BumpMapping/BumpMapping.tlog/: BumpMapping.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/CRTEffect/: CRTEffectd.exe.recipe
Debug/CRTEffect/CRTEffect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CRTEffect.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/GeometryFiltering/: GeometryFilteringd.exe.recipe
Debug/GeometryFiltering/Geometry.7219381E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GeometryFiltering.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/Lighting/: Lightingd.exe.recipe
Debug/Lighting/Lighting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lighting.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/MagicOrb/: MagicOrbd.exe.recipe
Debug/MagicOrb/MagicOrb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MagicOrb.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/PBR/: PBR.exe.recipe  vc143.idb
Debug/PBR/PBR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PBR.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/PGUPV/PGUPV.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Debug/ShadowMapping/: ShadowMappingd.exe.recipe  vc143.idb
Debug/ShadowMapping/ShadowMapping.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ShadowMapping.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/StencilWindshield/: StencilWindshieldd.exe.recipe
Debug/StencilWindshield/StencilW.95EDAC03.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
Debug/TessellatedTerrain/: TessellatedTerraind.exe.recipe
Debug/ej5-1/: ej5-1d.exe.recipe
Debug/ej5-2/: ej5-2d.exe.recipe
Debug/ej5-3/: ej5-3d.exe.recipe  vc143.idb
Debug/ej6-1/: ej6-1d.exe.recipe
Debug/ej6-2/: ej6-2d.exe.recipe
Debug/p4/: p4d.exe.recipe
Debug/p42/: p42d.exe.recipe
Debug/p5/: p5d.exe.recipe
Debug/p6/: p6d.exe.recipe
Debug/p7/: p7d.exe.recipe
Debug/p8/: p8d.exe.recipe
GeometryFiltering/: CMakeLists.txt  GeometryFiltering.geom  GeometryFiltering.vcxproj  GeometryFiltering.vert  imgui.ini  log.txt  main.cpp  properties.ini
Lighting/: CMakeLists.txt  Lighting.vcxproj  gouraud.frag  gouraud.vert  imgui.ini  log.txt  main.cpp  phong.frag  phong.vert  properties.ini
MagicOrb/: CMakeLists.txt  MagicOrb.vcxproj  imgui.ini  log.txt  main.cpp  passthrough.frg  textureReplace.frag
PBR/: CMakeLists.txt  PBR.vcxproj  imgui.ini  log.txt  main.cpp  pbr-mat.frag  pbr-mat.vert
PGUPV/: CMakeLists.txt  NO_MODIFICAR.txt  PGUPV.vcxproj  PGUPV.vcxproj.filters  animationChannel.cpp  animationClip.cpp  animationNode.cpp  animatorController.cpp  app.cpp  assimpWrapper.cpp  baseRenderer.cpp  bindableTexture.cpp  bindingPoint.cpp  bone.cpp  boundingVolumes.cpp  bufferObject.cpp  bufferRenderer.cpp  bufferTexture.cpp  button.cpp  camera.cpp  cameraHandler.cpp  checkBoxWidget.cpp  colorWheel.cpp  colorWidget.cpp  commandLineProcessor.cpp  commonDialogs.cpp  describeScenegraph.cpp  directionWidget.cpp  drawCommand.cpp  eventProcessor.cpp  eventSource.cpp  events.cpp  fbo.cpp  fileChooserWidget.cpp  fileLoader.cpp  fileStats.cpp  findNodeByName.cpp  floatSliderWidget.cpp  font.cpp  gamepad.cpp  (+86 more)
PGUPV/include/: GUI3.h  HW.h  PGUPV.h  animationChannel.h  animationClip.h  animationNode.h  animatorController.h  app.h  assimpWrapper.h  baseMaterial.h  baseRenderer.h  bindableTexture.h  bindingPoint.h  bone.h  boundingVolumes.h  bufferObject.h  bufferRenderer.h  bufferTexture.h  button.h  camera.h  camerahandler.h  checkBoxWidget.h  colorWheel.h  colorWidget.h  commandLineProcessor.h  common.h  commonDialogs.h  describeScenegraph.h  directionWidget.h  drawCommand.h  eventProcessor.h  eventSource.h  events.h  fbo.h  fileChooserWidget.h  fileFormats.h  fileLoader.h  fileStats.h  findNodeByName.h  floatSliderWidget.h  (+105 more)
ShadowMapping/: CMakeLists.txt  ShadowMapping.vcxproj  log.txt  main.cpp  p9.frag  p9.vert  shadowMap.frag  shadowMap.vert  zbuffershow.frag  zbuffershow.vert
ShadowMapping/Debug/ShadowMapping/: vc143.idb
ShadowMapping/Debug/ShadowMapping/ShadowMapping.tlog/: ShadowMapping.lastbuildstate
StencilWindshield/: CMakeLists.txt  StencilWindshield.vcxproj  log.txt  main.cpp  parabrisas2.mtl  properties.ini
TessellatedTerrain/: CMakeLists.txt  TessellatedTerrain.vcxproj  imgui.ini  log.txt  main.cpp  shader.frag  shader.tesc  shader.tese  shader.vert
cmake/Modules/: FindFFMPEG.cmake
lib/Debug/: PGUPV.idb
librerias/guipg/: CMakeLists.txt  guipg.cpp  guipg.vcxproj  icons.cpp  imGuIZMOquat.cpp  logConsole.cpp  nfd_common.c  nfd_win.cpp
librerias/guipg/include/: guipg.h  imGuIZMOquat.h  logConsole.h  vGizmoConfig.h  vGizmoMath.h  vgMath.h
p0/: CMakeLists.txt  log.txt  main.cpp  p0.vcxproj  triangles.vert
p1/: CMakeLists.txt  Pino.mtl  imgui.ini  log.txt  main.cpp  p1.vcxproj
p2/: CMakeLists.txt  log.txt  lowpolypine2.mtl  main.cpp  p2.vcxproj
recursos/imagenes/: uffizi-diffuse.dds  uffizi-phong-100.dds  uffizi.dds
recursos/modelos/: Cerberus_LP.FBX  Cerberus_LP.pgmat  Wuson.pgmat  bunny.pgmat  teapot.3ds  teapot.pgmat  tree2.mtl
recursos/shaders/: ambdiff.frag  ambdiff.vert  constantshading.frag  constantshading.vert  constantshadinguniform.frag  constantshadinguniform.vert  showDepthStencil.frag  showDepthStencil.vert  showRectangleTexture.frag  showRectangleTexture.vert  simplyDiffuse.frag  simplyDiffuse.vert  skybox.frag  skybox.vert  textureReplace.vert
(+85 files in other folders)
